--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,8 +22,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
+      - run: npm ci || npm install
       - run: npm run build
+      - run: cp CNAME dist/CNAME
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
